crates/reinhardt-core/macros/tests/ui/hook/fail/hook_empty_args.rs
use reinhardt_macros::hook;

#[hook()]
struct MyHook;

fn main() {}
