crates/reinhardt-core/macros/tests/ui/hook/fail/hook_empty_args.stderr
error: unexpected end of input, expected identifier
 --> tests/ui/hook/fail/hook_empty_args.rs:3:1
  |
3 | #[hook()]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `hook` (in Nightly builds, run with -Z macro-backtrace for more info)
